# agent-estimate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  action.yml  metr_thresholds.yaml  pyproject.toml
.agent/skills/estimate/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  test-action.yml  testpypi.yml
examples/: README.md  coding-m.md  coding-s.md  documentation.md  multi-agent.md  research.md
schemas/trace/: external_trace.schema.json  internal_trace.schema.json
scripts/: render_trace_schemas.py
skills/estimate/: SKILL.md
src/agent_estimate/: __init__.py  cli.py  default_agents.yaml  metr_thresholds.yaml  version.py
src/agent_estimate/adapters/: __init__.py  config_loader.py  github_adapter.py  github_ghcli.py  github_rest.py  sqlite_store.py
src/agent_estimate/cli/: __init__.py  app.py
src/agent_estimate/core/: __init__.py  decompose.py  history.py  human_comparison.py  metrics.py  models.py  modifiers.py  pert.py  session.py  sizing.py  task_type_models.py  wave_planner.py
src/agent_estimate/render/: __init__.py  json_report.py  markdown_report.py  report_models.py
src/agent_estimate/skill/: SKILL.md  __init__.py  claude_wrapper.py
src/agent_estimate/tracing/: __init__.py  schema.py
tests/: conftest.py
tests/fixtures/: cycle_invalid.yaml  dispatch_history.json  json_report_golden.json  malformed_missing_agent.yaml  minimal_agents.yaml  observation_valid.yaml  parallel_fanout.yaml  simple_linear.yaml  tasks_multi.txt
tests/integration/: test_cli_e2e.py  test_regression.py
tests/unit/: test_auto_tier.py  test_config_loader.py  test_config_loader_gaps.py  test_github_adapters.py  test_github_helpers.py  test_history.py  test_human_comparison.py  test_json_report.py  test_markdown_report.py  test_models.py  test_modifiers.py  test_pert_engine.py  test_pert_gaps.py  test_pipeline_metr_mapping.py  test_plugin_structure.py  test_session.py  test_sizing.py  test_sqlite_gaps.py  test_sqlite_store.py  test_task_type_models.py  test_trace_schema.py  test_version.py  test_wave_planner.py
(+6 files in other folders)
