[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-estimate"
version = "0.0.1"
description = "Effort estimation for AI coding agents — PERT + METR + wave planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "haoranc" },
]
keywords = ["ai", "agents", "estimation", "pert", "planning"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/haoranc/agent-estimate"
Repository = "https://github.com/haoranc/agent-estimate"
Issues = "https://github.com/haoranc/agent-estimate/issues"

[project.scripts]
agent-estimate = "agent_estimate.cli:main"
