[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "agent-estimate"
version = "0.3.0"
description = "Effort estimation for AI coding agents — PERT + METR + wave planning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "haoranc" }]
keywords = ["ai", "agents", "estimation", "pert", "planning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12,<1.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.0,<3.0",
  "networkx>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/haoranc/agent-estimate"
Repository = "https://github.com/haoranc/agent-estimate"
Issues = "https://github.com/haoranc/agent-estimate/issues"

[project.scripts]
agent-estimate = "agent_estimate.cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
